Include 3 new recipes and their descriptions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Recipe</h1>
+    <ul>
+        <li><a href="recipes/friedchicken.html">Korean Fried Chicken</a></li>
+        <li><a href="recipes/frenchfries.html">French Fries</a></li>
+        <li><a href="recipes/ramen.html">Ramen</a></li>
+    </ul>
 </body>
 </html>
