Fix missing heading (Steps) in 3 recipe pages

--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -14,6 +14,7 @@
     <li>oil, for deep-frying</li>
     <li>white sesame, for garnishing</li>
 </ul>
+<h2>Steps</h2>
 <ol>
     <li>Season the chicken with some salt and black pepper, then coat well with the potato starch. Set aside.</li>
     <li>Combine all the ingredients for Dressing together, stir to mix well.</li>
