--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -15,6 +15,7 @@
     <li>4 stalks of spring onions trimmed and cut in half</li>
     <li>4 – 5 cups of good quality chicken stock preferably low sodium</li>
 </ul>
+<h2>Steps</h2>
 <ol>
     <li>While the caramelized soy chicken is cooking in the oven, make the ramen base.</li>
     <li>Place two saucepans on the stove.</li>
