--- a/recipes/frenchfries.html
+++ b/recipes/frenchfries.html
@@ -9,6 +9,7 @@
     <li>salt</li>
     <li>2 quarts vegetable oil, can sub canola oil</li>
 </ul>
+<h2>Steps</h2>
 <ol>
     <li>Slice the potatoes into ½ inch thick sticks. Using a French fry cutter makes this much easier.</li>
     <li>Soak the potato slices in cold water for a minimum of one hour, and up to overnight. The longer, the better as this process removes the starch which makes for extra crispy fries.</li>
