apply some css to the pages

--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -1,23 +1,37 @@
-<h1>Korean Fried Chicken</h1>
-<img src="kfriedchicken.jpg" alt="korean fried chicken">
-<h2>Description</h2>
-<p>Korean-style fried chicken is radically different, reflecting an Asian frying technique that renders out the fat in the skin, transforming it into a thin, crackly and almost transparent crust. (Chinese cooks call this “paper fried chicken.”) The chicken is unseasoned, barely dredged in very fine flour and then dipped into a thin batter before going into the fryer. The oil temperature is a relatively low 350 degrees, and the chicken is cooked in two separate stages.
-    After 10 minutes, the chicken is removed from the oil, shaken vigorously in a wire strainer and allowed to cool for two minutes. This slows the cooking process, preventing the crust from getting too brown before the meat cooks through. It also shaves off all those crusty nubs and crags that American cooks strive for.
-    After 10 more minutes in the fryer, the chicken is smooth, compact, golden-brown, and done. Then, it’s served plain (with a small dish of salt and pepper for seasoning) or lightly painted with sauce. When it’s done correctly, the sauce is absorbed into the crust, adding savor without making it soggy.
-</p>
-<h2>Ingredient</h2>
-<ul>
-    <li>1 lb. (0.4 kg) chicken wings, drummettes and wingettes</li>
-    <li>salt</li>
-    <li>ground black pepper</li>
-    <li>1/2 cup potato starch</li>
-    <li>oil, for deep-frying</li>
-    <li>white sesame, for garnishing</li>
-</ul>
-<h2>Steps</h2>
-<ol>
-    <li>Season the chicken with some salt and black pepper, then coat well with the potato starch. Set aside.</li>
-    <li>Combine all the ingredients for Dressing together, stir to mix well.</li>
-    <li>Heat up a Dutch oven, deep skillet or pan with 3 inches of oil. Heat the oil to 375°F (190°C). Coat the wings again and shake off the excess potato starch. Drop the wings gently into the oil and deep-fry until light brown or when they are cooked and become crispy. Remove the wings from the oil and drained on paper towels. </li>
-    <li>Combine the Dressing and the wings, toss to coat well. Garnish with the sesame and serve immediately.</li>
-</ol>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Korean Fried Chicken</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+    </ul>
+    <h1>Korean Fried Chicken</h1>
+    <img src="kfriedchicken.jpg" alt="korean fried chicken">
+    <h2>Description</h2>
+    <p>Korean-style fried chicken is radically different, reflecting an <strong>Asian frying technique</strong> that renders out the fat in the skin, transforming it into a thin, crackly and almost transparent crust. (<strong>Chinese cooks call this “paper fried chicken.”</strong>) The chicken is unseasoned, barely dredged in very fine flour and then dipped into a thin batter before going into the fryer. The oil temperature is a relatively low 350 degrees, and the chicken is cooked in two separate stages.
+        After 10 minutes, the chicken is removed from the oil, shaken vigorously in a wire strainer and allowed to cool for two minutes. This slows the cooking process, preventing the crust from getting too brown before the meat cooks through. It also shaves off all those crusty nubs and crags that American cooks strive for.
+        After 10 more minutes in the fryer, the chicken is smooth, compact, golden-brown, and done. Then, it’s served plain (with a small dish of salt and pepper for seasoning) or lightly painted with sauce. When it’s done correctly, the sauce is absorbed into the crust, adding savor without making it soggy.
+    </p>
+    <h2>Ingredient</h2>
+    <ul>
+        <li>1 lb. (0.4 kg) chicken wings, drummettes and wingettes</li>
+        <li>salt</li>
+        <li>ground black pepper</li>
+        <li>1/2 cup potato starch</li>
+        <li>oil, for deep-frying</li>
+        <li>white sesame, for garnishing</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Season the chicken with some salt and black pepper, then coat well with the potato starch. Set aside.</li>
+        <li>Combine all the ingredients for Dressing together, stir to mix well.</li>
+        <li>Heat up a Dutch oven, deep skillet or pan with 3 inches of oil. Heat the oil to 375°F (190°C). Coat the wings again and shake off the excess potato starch. Drop the wings gently into the oil and deep-fry until light brown or when they are cooked and become crispy. Remove the wings from the oil and drained on paper towels. </li>
+        <li>Combine the Dressing and the wings, toss to coat well. Garnish with the sesame and serve immediately.</li>
+    </ol>
+</body>
+</html>
