--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="linkstyle.css">
 </head>
-<body>
-    <h1>Recipe</h1>
+<body class="home">
+    <h1 style="color:brown">Recipe</h1>
     <ul>
         <li><a href="recipes/friedchicken.html">Korean Fried Chicken</a></li>
         <li><a href="recipes/frenchfries.html">French Fries</a></li>
